[tool.poetry]
name = "concourseatom"
version = "0.3.0"
description = "Read Concourse Pipelines and intelligently allowing pipelines to be built from snipits"
authors = ["Ben Greene <BenJGreene@gmail.com>"]
readme = "README.md"
license = "GPL3"
repository = "https://github.com/PolecatWorks/concourseatom"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
"ruamel.yaml" = "<0.18"
pydantic-yaml = "^1.2.0"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
Sphinx = "^7.2.6"
sphinx-autodoc-typehints = "^1.25.2"
pytest-sphinx = "^0.5.0"
flake8 = "^6.1.0"
flake8-black = "^0.3.6"
pylint = "^3.0.2"
sphinx-click = "^5.0.1"
pytest-click = "^1.1.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
concmerge = "concourseatom.tools:cli"
